# v2-solucoes

./: .env  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  repository.toml  towncrier.toml
.github/workflows/: main.yml  varnish.yml
backend/: CONTRIBUTORS.md  Dockerfile  Dockerfile.acceptance  LICENSE.md  Makefile  README.md  bobtemplate.cfg  instance.yaml  pyproject.toml
backend/scripts/: create_site.py
backend/src/v2/solucoes/: __init__.py  configure.zcml  dependencies.zcml  permissions.zcml  profiles.zcml  testing.py
backend/src/v2/solucoes/controlpanels/: configure.zcml
backend/src/v2/solucoes/locales/: v2.solucoes.pot
backend/src/v2/solucoes/locales/en/LC_MESSAGES/: v2.solucoes.po
backend/src/v2/solucoes/profiles/default/: browserlayer.xml  metadata.xml
backend/src/v2/solucoes/profiles/default/registry/: main.xml  plone.base.interfaces.controlpanel.IMailSchema.xml  plone.base.interfaces.controlpanel.ISiteSchema.xml
backend/src/v2/solucoes/profiles/initial/: metadata.xml
backend/src/v2/solucoes/profiles/uninstall/: browserlayer.xml
backend/src/v2/solucoes/serializers/: configure.zcml
backend/src/v2/solucoes/setuphandlers/: __init__.py  initial.py
backend/src/v2/solucoes/upgrades/: configure.zcml
backend/tests/: conftest.py
backend/tests/setup/: test_setup_install.py  test_setup_uninstall.py
devops/: README-GITLAB.md
devops/stacks/: v2solucoes.com.br.yml
devops/varnish/: Dockerfile
docs/: README.md  pyproject.toml
docs/docs/: conf.py  glossary.md  index.md
docs/docs/concepts/: index.md
docs/docs/how-to-guides/: index.md
docs/docs/reference/: index.md
docs/docs/tutorials/: index.md
frontend/: .env  .eslintrc.js  .gitignore  Dockerfile  Makefile  README.md  package.json  pnpm-lock.yaml  volto.config.js
